--- a/DeepSurv/notebooks/DeepSurv.ipynb
+++ b/DeepSurv/notebooks/DeepSurv.ipynb
@@ -42,9 +42,19 @@
    },
    "outputs": [],
    "source": [
-    "train_dataset_fp = './example_data.csv'\n",
-    "train_df = pd.read_csv(train_dataset_fp)\n",
-    "train_df.head()"
+    "train_dataset_fp = './GastricCancerData.xlsx'\n",
+    "train_df = pd.read_excel(train_dataset_fp)\n",
+    
+    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder"
+     "# Identifier les colonnes catégoriques"
+     "CatCols = train_df.select_dtypes(include=['object']).columns"
+     "# Encodage des variables catégoriques"
+     "#Label Encoding"
+    "label_encoder = LabelEncoder()"
+   " for col in CatCols:
+   "train_df[col] = label_encoder.fit_transform(train_df[col].astype(str))"
+
+   "train_df.head()"
    ]
   },
   {
