--- a/DeepSurv/notebooks/DeepSurv.ipynb
+++ b/DeepSurv/notebooks/DeepSurv.ipynb
@@ -42,8 +42,8 @@
    },
    "outputs": [],
    "source": [
-    "train_dataset_fp = './example_data.csv'\n",
-    "train_df = pd.read_csv(train_dataset_fp)\n",
+    "train_dataset_fp = './GastricCancerData.xlsx'\n",
+    "train_df = pd.read_excel(train_dataset_fp)\n",
     "train_df.head()"
    ]
   },
